--- a/index.html
+++ b/index.html
@@ -132,8 +132,7 @@
 
     <section>
         <div>
-            <i class="fa fa-diamond"></i>
-
+            
             <h2>etiam veroeros lorem</h2>
 
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus, sunt porro. Dolorum ad tenetur mollitia
@@ -150,7 +149,7 @@
 
     <!--FIN TROISIEME SECTION-->
 
-    <section>
+    <footer>
         <div>
 
             <i class="fab fa-twitter"></i>
@@ -163,11 +162,7 @@
 
             <i class="fas fa-envelope"></i>
 
-        </div>
-
-    </section>
-
-    <section>
+        </div>    
 
         <div class="copyright">
 
@@ -175,7 +170,7 @@
 
         </div>
 
-    </section>
+    </footer>
 
 </body>
 
